# bulgogi

./: .gitignore  C.txt  C2.txt  CNAME  Cargo.toml  LICENSE  LICENSE.OLD  Makefile  PROJECT.md  README.md  SYNOPSIS.md  bugs.txt  bulgogi  client.cc  client.hpp  compile_flags.txt  doxygen  features.txt  hash_tables.txt  holy_shit.txt  laws.txt  main.cc  makefile  project.hpp  project.yaml  python.txt  readme.md  reminders.txt  roadmap.txt  rules.md  rules.txt  synopsis.txt  todo.txt  unknown1.yaml  unknown2.yaml  unknown3.yaml  unknown4.yaml  vision.txt
inc/: bul_dot_bul.h  bul_fs.h  client.h  client.hpp  cmake.hpp  core.h  directory-tree-print.hpp  dot_bul.h  engine.h  fs.h  project.hpp  rules.h  yaml_ext.h
module1/src/: main.c
module2/src/: module2.c
module3/src/: junk.c
module4/src/: crap.c
rust-src/: client.rs  cmake.rs  dependency.rs.old  project.rs  project.rs.old
src/: Makefile  bul_dot_bul.c  bul_fs.c  bulgogi.c  client.c  client.cpp  client.rs  client.rs.old  cmake.cpp  cmake.rs  cmake.rs.old  core.c  dependency.rs  directory-tree-print.cpp  dot_bul.c  engine.c  example.cc.old  fs.c  main.c  main.cpp  main.rs  project.cpp  project.rs  rules.c  target.rs  template.rs  test.c
templates/: default.json  lib.blg  mod.blg  proj.blg  top.blg  top.blgg
